[package]
name = "agsol-common"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Agora DAO <mark@gold.xyz>"]
keywords = ["web3", "solana"]
description = "Common utilities to make development on Solana easier."
repository = "https://github.com/agoraxyz/agora-solana"

[features]
derive = ["agsol-common-derive"]

[dependencies]
borsh = "0.9.0"
borsh-derive = "0.9.0"
solana-program = "1.9.0"
thiserror = "1.0"
agsol-common-derive = { path = "./agsol-common-derive", optional = true}

[dev-dependencies]
agsol-common-derive = { path = "./agsol-common-derive" }
