[package]
name = "agsol-glue"
version = "0.1.0-alpha"
edition = "2021"
license = "MIT"
authors = ["Agora DAO <mark@gold.xyz>"]
description = "Tool for generating TS schema and wasm bindings from solana contracts"
repository = "https://github.com/agoraxyz/agora-solana"

[dependencies]
anyhow = "1.0"
structopt = "0.3"
agsol-borsh-schema = { version = "0.0.2", path = "../agsol-borsh-schema", features = ["full"] }
