[package]
name = "agsol-testbench"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Agora DAO <mark@gold.xyz>"]
repository = "https://github.com/agoraxyz/agora-solana"

[dependencies]
borsh = "0.9.0"
serde = "1.0"
solana-program = "1.9.0"
solana-program-runtime = "1.9.0"
solana-program-test = "1.9.0"
solana-sdk = "1.9.0"
# update this once spl-token v3.2+ is out (wasm compatiblity issue)
spl-token = { git = "https://github.com/zgendao/solana-program-library.git", features = ["no-entrypoint"] }
