[package]
name = "agsol-testbench"
version = "0.0.1-alpha.1"
edition = "2021"
description = "Testbench utilities for testing solana programs locally"
license = "MIT"
authors = ["Agora DAO <mark@gold.xyz>"]
repository = "https://github.com/agoraxyz/agora-solana"

[dependencies]
borsh = "0.9.0"
serde = "1.0"
solana-program = "1.9.0"
solana-program-runtime = "1.9.0"
solana-program-test = "1.9.0"
solana-sdk = "1.9.0"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
thiserror = "1.0"
