[package]
name = "agsol-wasm-client-test"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
agsol-wasm-client = { path = "../agsol-wasm-client", features = ["wasm-factory"] }
borsh = "0.9"
bs58 = "0.4"
serde_json = "1.0"
solana-program = "1.9.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
