[package]
name = "agsol-wasm-client-test"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Agora DAO <mark@gold.xyz>"]
repository = "https://github.com/agoraxyz/agora-solana"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
agsol-wasm-client = { path = "../agsol-wasm-client", features = ["wasm-factory"] }
borsh = "0.9"
bs58 = "0.4"
serde_json = "1.0"
solana-program = "1.9.0"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"

[dev-dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
