[package]
name = "agsol-common-derive"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Agora DAO <mark@gold.xyz>"]
keywords = ["web3", "solana"]
repository = "https://github.com/agoraxyz/agora-solana"

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
