[package]
name = "agsol-wasm-factory"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Agora DAO <mark@gold.xyz>"]
keywords = ["web3", "solana", "wasm"]
repository = "https://github.com/agoraxyz/agora-solana"

[lib]
proc_macro = true

[dependencies]
heck = "0.3"
proc-macro2 = "1.0"
quote = "1.0"

[dev-dependencies]
borsh = "0.9"
borsh-derive = "0.9"
serde_json = "1.0"
solana-program = "1.9.0"
wasm-bindgen = "0.2"
